post: fix always scrollbar on the chromium-baseds

--- a/src/Feeds/inner-doc.css
+++ b/src/Feeds/inner-doc.css
@@ -19,5 +19,5 @@ h6 {
 }
 
 pre {
-    overflow: scroll;
+    overflow: auto;
 }
